# meteo

./: .gitignore  .pre-commit-config.yaml  .yo-rc.json  README.md  pyproject.toml
src/: __init__.py  params.py
src/API/: __init__.py  get_data.py  store_data.py  utils.py  weather_mods.py
src/IOHandler/: __init__.py  get_cities_coordinates.py  map_representation.py  write_data.py  writting_mods.py
src/utils/: default_values.py
tests/: __init__.py  test_params.py
tests/API/: test_get_data.py
tests/IOHandler/: test_map_representation.py  test_write_data.py
